# use_fabmap

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README  README.md  README~  cmake_install.cmake  commands  results_fabmap_nantes.m  resultsfabMapResult.txt
include/: FabMap.h  FabMap.h~
openfabmap/: Makefile  cmake_install.cmake  openFABMAP.cbp
openfabmap/trainingdata/new_college/: tree.yml
results/: fabMapResult_Nantes_cloudy_sunny_dft_train.txt  fabMapResult_Nantes_cloudy_sunny_st_lucia_train.txt
src/: FabMap.cpp  use_fabmap.cpp  use_fabmap_video.cpp  use_fabmap_video_city_center.cpp  use_fabmap_video_mono.cpp  use_fabmap_video_st_lucia.cpp
